# axum_aio3_async_graphql_practice

./: Cargo.toml  pyproject.toml
py_utils/: sub_utils.py  utils.py
src/: factorial.rs  main.rs
src/entities/: mod.rs  page.rs  page_with_requirements.rs  prelude.rs
