[package]
name = "axum_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"
axum = {version = "0.5.1", features = ["headers", "macros"]}
bb8-redis = "0.12.0"
hyper = "0.14.23"
pyo3 = "0.17.3"
pyo3-asyncio = { version = "0.17.0", features = ["attributes", "tokio-runtime"] }
rand = "0.8.5"
redis = { version = "0.22.1", features = ["tokio-comp"] }
rug = "1.18.0"
sea-orm = {version = "0.10.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "mock"]}
serde = "1.0.147"
serde_json = "1.0.88"
tokio = {version = "1.22.0", features = ["full"]}
tower = {version = "0.4.13", features = ["full"]}

