[tool.poetry]
name = "axum_practice"
version = "0.1.0"
description = ""
authors = ["vamshi.aruru <vamshi.aruru@virgodesigns.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]
maturin = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
